[package]
name = "lean-dependency-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.24.1"
egui = "0.24.1"
egui_graphs = { version ="0.17.0", features = ["events"] }
petgraph = "0.6.4"
rand = "0.8.5"
rfd = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4.20"
reqwest = { version = "0.11.22", features = ["json"] }
wasm-bindgen-futures = "0.4.39"
chrono = "0.4.31"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1.35.0", features = ["macros", "full"] }
